// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add Travis CI 1`] = `
Object {
  "/.travis.yml": "language: node_js
cache:
  directories:
    - node_modules
node_js:
  - 4
  - 6
  - 8
  - 9
",
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"engines\\": {
    \\"node\\": 4
  },
  \\"scripts\\": {
    \\"test\\": \\"jest\\"
  }
}",
}
`;

exports[`should add a badge to the Readme 1`] = `
"# Unicorn

[![Build Status](https://travis-ci.org/gh/unicorn.svg)](https://travis-ci.org/gh/unicorn)"
`;

exports[`should add latest Node version if engines field is not defined 1`] = `
"language: node_js
cache:
  directories:
    - node_modules
node_js:
  - 9
"
`;

exports[`should add latest Node version if engines field is not defined 2`] = `
"language: node_js
cache:
  directories:
    - node_modules
node_js:
  - 4
  - 6
  - 7
"
`;
